fix content overflow issue when displaying pie charts

--- a/plugins/030-disks/app/assets/stylesheets/disks.css
+++ b/plugins/030-disks/app/assets/stylesheets/disks.css
@@ -13,4 +13,6 @@
 	display: none;
 }
 
-
+#content {
+	overflow: hidden;
+}
